<!--
  ~ Copyright 2020 Ankit Ghate
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">EmployeePortal</string>

    <string name="welcome_title_text">Welcome,\nLet\'s get you started</string>
    <string name="placeholder_text">loremipsum</string>
    <string name="placeholder_text_for_lists">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="hint_employeeid">Cybage ID</string>
    <string name="placeholder_text_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In diam diam, rutrum non lacinia id, ullamcorper non nunc. Mauris vel arcu vitae ligula accumsan tincidunt vel non erat. Nunc eu urna tellus. Sed risus tortor, dignissim ut orci feugiat, condimentum ornare quam. Duis et libero quis ligula elementum pharetra nec quis nisi. Cras vitae augue elementum, ultrices erat et, volutpat odio. Vestibulum pulvinar mattis consectetur. Nunc aliquam purus eu turpis vehicula faucibus. Morbi molestie tincidunt scelerisque. Duis scelerisque risus at dolor imperdiet tristique vel at lorem. Cras malesuada facilisis arcu, nec rutrum neque egestas ac. Nulla id posuere augue.

Donec convallis, nisl eu tincidunt molestie, arcu urna sagittis nisl, sed sodales ligula sapien rutrum eros. Donec mattis pretium ipsum, et commodo nulla gravida sed. Donec vitae lacus ut magna placerat laoreet. Nulla molestie in ex id dapibus. Praesent felis dui, rutrum a bibendum et, fermentum euismod quam. Nulla egestas orci ullamcorper, molestie metus id, elementum nulla. Donec mauris ex, porttitor quis risus eu, molestie ultrices nulla. Donec ultricies lorem id enim gravida dictum. Vivamus sed risus rutrum, commodo mauris sit amet, hendrerit mauris. Nullam posuere mauris eu risus pretium vestibulum. Nunc placerat justo vel mollis rutrum. In hac habitasse platea dictumst. Morbi faucibus sodales nunc eu laoreet. Aenean volutpat interdum metus, eu pretium diam volutpat nec.

Aliquam erat volutpat. Mauris aliquet tempor convallis. Suspendisse magna quam, elementum ut finibus non, auctor id nisi. Donec nec diam eget justo egestas semper ac non elit. Donec at eros semper, commodo ligula id, vehicula leo. Mauris urna quam, tempus condimentum leo vitae, hendrerit commodo leo. Nunc fringilla egestas dictum. Ut viverra scelerisque sem non dictum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In ut elementum libero. Nulla eget nulla placerat, malesuada arcu vel, accumsan leo. Aenean ut ex sit amet urna condimentum posuere ac eget nisi. Cras sollicitudin volutpat nulla, vitae elementum libero sollicitudin nec.</string>
    <string name="login_body_text">Login with credentials registered with your organisation</string>
    <string name="password_text">Password</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="search">Search</string>
    <string name="empty"> </string>
    <string name="register_button_text">REGISTER</string>
    <string name="username_hint_text">Username</string>
    <string name="awhfragment_title_text">AWH Details</string>
    <string name="title_text_leavesfragment">Leaves</string>
    <string name="text_button_start">Start</string>
    <string name="login_button_text">REGISTER</string>
    <string name="authentication_failed_message">Authentication Failed. Please check your Credentials and login again</string>
    <string name="error_enter_valid_employeeid">Please enter a valid employeeID</string>
    <string name="error_enter_valid_username">Please enter a valid username</string>
    <string name="error_enter_valid_designation">Please enter a valid designation</string>
    <string name="error_enter_valid_email">Please enter a valid email</string>
    <string name="error_enter_valid_password">Please enter a valid password</string>
    <string name="hint_designation">Designation</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="storage_rationale">Please provide permission for Storage for setting profile photo</string>
    <string name="error_in_user_creation">[Error] : There seems to be some issue while creating user.Please try again later</string>
    <string name="cardtitle_organisation_news">Organisation News</string>
    <string name="cardtitle_leave_balance">Leave Balance</string>
    <string name="cardtitle_awh">AWH</string>
    <string name="cardtitle_gratify_balance">Gratify Balance</string>
    <string name="cd_add_leaves_button">Add Leaves Button</string>
    <string name="home_average_in_time_title">In Time</string>
    <string name="home_actual_work_hour_title">Work Hour</string>
    <string name="fragment_title_feed">Feed</string>
    <string name="title_article">Articles</string>
    <string name="placeholder_date">20 Feb 2020</string>
    <string name="placeholder_name">Arun Nathani</string>
    <string name="menu_home">Home</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_article">Article</string>
    <string name="menu_people">People</string>
    <string name="menu_settings">Settings</string>
    <string name="cd_article_detail_hero_image">article_detail_hero_image</string>
    <string name="cd_article_back_button">article_back_button</string>
</resources>