<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Ankit Ghate
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_900"
    android:padding="@dimen/padding_24"
    tools:context=".ui.registration.RegistrationFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_profile_imageview"
        android:layout_width="@dimen/profileimage_width"
        android:layout_height="@dimen/profileimage_height"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/add_profile_placeholder"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="1dp"
        app:civ_circle_background_color="@color/dark_default_color_on_surface"
        app:layout_constraintBottom_toTopOf="@+id/register_employeeId_inputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_username_inputlayout"
        style="@style/TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="@string/username_hint_text"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/register_designation_inputlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_employeeId_inputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_username_editext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:nextFocusDown="@id/register_designation_inputlayout"
            android:singleLine="true"
            android:textColor="@color/dark_default_color_on_surface"
            android:textCursorDrawable="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_designation_inputlayout"
        style="@style/TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_designation"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/register_email_inputlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_username_inputlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_designation_editext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusDown="@id/register_email_inputlayout"
            android:singleLine="true"
            android:textColor="@color/dark_default_color_on_surface"
            android:textCursorDrawable="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password_inputlayout"
        style="@style/TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:textColorHint="@color/colorAccent"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_inputlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_editext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:nextFocusDown="@id/register_button"
            android:singleLine="true"
            android:textColor="@color/dark_default_color_on_surface"
            android:textCursorDrawable="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_email_inputlayout"
        style="@style/TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="@string/hint_email"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/register_password_inputlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_designation_inputlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email_editext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:nextFocusDown="@id/register_password_inputlayout"
            android:singleLine="true"
            android:textColor="@color/dark_default_color_on_surface"
            android:textCursorDrawable="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_employeeId_inputLayout"
        style="@style/TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="@string/hint_employeeid"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/register_username_inputlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_profile_imageview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_employeeid_editext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:maxLines="1"
            android:nextFocusDown="@id/register_username_inputlayout"
            android:singleLine="true"
            android:textColor="@color/dark_default_color_on_surface"
            android:textCursorDrawable="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/register_login_progress"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/register_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/register_button"
        app:layout_constraintEnd_toStartOf="@+id/register_button"
        app:layout_constraintTop_toTopOf="@+id/register_button"
        tools:visibility="visible" />

    <Button
        android:id="@+id/register_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/jostbold"
        android:text="@string/register_button_text"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_inputlayout"
        app:rippleColor="@color/ripple_background" />

</androidx.constraintlayout.widget.ConstraintLayout>