<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Ankit Ghate
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_article_detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.article.articleDetail.ArticleDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_900">


        <ImageView
            android:id="@+id/articledetail_hero_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitXY"
            android:src="@drawable/placeholder_background_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/navBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/padding_8"
            android:background="@drawable/back_button_background"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/padding_8"
            android:paddingBottom="10dp"
            android:tint="@color/dark_default_color_on_surface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_arrow_back" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="368dp"
            android:src="@drawable/avatar_2"
            app:civ_border_color="@color/dark_default_color_surface"
            app:civ_border_width="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/article_author_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/placeholder_name"
            android:textAppearance="@style/TextAppearance.Caption"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
            app:layout_constraintEnd_toStartOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/articledetail_hero_image"
            tools:text="Arun Nathani" />

        <TextView
            android:id="@+id/article_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/placeholder_date"
            android:textAppearance="@style/TextAppearance.Caption"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/articledetail_hero_image" />

        <TextView
            android:id="@+id/article_body_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:padding="@dimen/padding_8"
            android:text="@string/placeholder_text_paragraph"
            android:textAppearance="@style/TextAppearance.Body1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView"
            tools:text="@string/placeholder_text_paragraph" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>