<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_8"
    tools:context=".ui.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_home_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_900"
        tools:context=".ui.home.HomeFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/home_user_cardview"
            style="@style/Widget.App.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/home_profile_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="1dp"
                    app:civ_circle_background_color="@color/white_50"
                    tools:src="@drawable/ic_default_profile_avatar" />

                <TextView
                    android:id="@+id/home_username_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jostregular"
                    android:textColor="@color/off_white"
                    android:textSize="25sp"
                    tools:ignore="RelativeOverlap"
                    tools:text="Ankit Ghate" />

                <TextView
                    android:id="@+id/home_designation_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home_username_title"
                    android:layout_marginTop="-2dp"
                    android:fontFamily="@font/jostlight"
                    android:textColor="#DDDDDD"
                    android:textSize="12sp"
                    tools:text="Senior Android Developer" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/home_organisation_news_cardview"
            style="@style/Widget.App.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="@dimen/home_cardview_corner_radius"
            app:cardElevation="@dimen/home_cardview_elevation"
            app:contentPadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/home_user_cardview"
            tools:layout_editor_absoluteX="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/home_organisation_news_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jostbold"
                    android:text="@string/cardtitle_organisation_news"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_organisation_news_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_below="@id/home_organisation_news_title"
                    android:layout_marginTop="5dp"
                    tools:itemCount="3"
                    tools:listitem="@layout/organisation_new_item" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/home_leave_balance_cardview"
            style="@style/Widget.App.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="@dimen/home_cardview_corner_radius"
            app:cardElevation="@dimen/home_cardview_elevation"
            app:contentPadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_organisation_news_cardview">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/home_add_leaves_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/cd_add_leaves_button"
                    android:elevation="20sp"
                    android:src="@mipmap/ic_add" />

                <TextView
                    android:id="@+id/home_leave_balance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jostbold"
                    android:text="@string/cardtitle_leave_balance"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home_leave_balance_title"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/home_floating_holidays_cardview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/home_cardview_corner_radius"
                        app:cardElevation="@dimen/home_cardview_elevation">

                        <include layout="@layout/planned_leaves_item" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/home_unplaneed_leaves_cardview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/home_cardview_corner_radius"
                        app:cardElevation="@dimen/home_cardview_elevation">

                        <include layout="@layout/unplanned_leaves_item" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/home_planned_leaves_cardview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/home_cardview_corner_radius"
                        app:cardElevation="@dimen/home_cardview_elevation">

                        <include layout="@layout/floating_leaves_item" />
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/home_leave_balance_cardview">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/home_awh_cardview"
                style="@style/Widget.App.CardView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/home_cardview_corner_radius"
                app:cardElevation="@dimen/home_cardview_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/my_awh_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/jostbold"
                        android:text="@string/cardtitle_awh"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <include layout="@layout/awh_item" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/home_gratify_cardview"
                style="@style/Widget.App.CardView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/home_cardview_corner_radius"
                app:cardElevation="@dimen/home_cardview_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/home_gratify_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/jostbold"
                        android:text="@string/cardtitle_gratify_balance"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <include layout="@layout/gratify_item" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>